# aoc_2021

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  justfile
.space/: devfile.yaml
src/: lib.rs  main.rs
src/day/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_16.rs
src/day/day_01/: mod.rs
templates/: test.rs
tests/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_16.rs
